Tests/CompilerTests/negative/invalid-ascription.hylo
//! no-std

public fun main() {
  var a: Void
  var b: a
}
